[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdeck"
version = "0.1.0"
description = "Convert Markdown to Beamer PDF presentations"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "python-frontmatter>=1.0",
]

[project.scripts]
markdeck = "markdeck.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/markdeck"]
